<resources>
    <string name="app_name">Matamgi Manipur</string>
    <!-- Nav Drawer-->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="Fantasy">Fantasy</string>
    <string name="suspense">Suspense</string>
    <string name="thriller">Thriller</string>


    <string-array name="nav_drawer_items">
        <item>Search Move</item>
        <item>Youtube Video</item>
        <item>Extra1</item>
        <item>Extra2</item>
        <item>Extra3</item>
        <item>My Movies</item>
        <item>Settings</item>
        <item>Feedback</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ts_1</item>
        <item>@drawable/ts_2</item>
        <item>@drawable/ts_3</item>
        <item>@drawable/ts_4</item>
        <item>@drawable/ts_5</item>
        <item>@drawable/ts_6</item>
        <item>@drawable/ts_7</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="singer">Singer</string>
    <string name="composer">Composer</string>
    <string name="director">Director</string>
    <string name="time">Released</string>
    <string name="actor">Actor</string>
    <string name="settings">Settings</string>
    <string name="lists">List</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="developer">Developer</string>
    <string name="developer2">Developer2</string>
    <string name="share">Share</string>
    <string name="about">       He was very enthusiastic in music since from childhood.From High school he started learning guiter.Then he became warak Composer and Warak kalakar.</string>
    <string name="facebook_app_id">1807362952817019</string>




    <string name="faq">Help:
Q1. How to search videos for a particular singer/actor/composer/director?
A->  Step 1: Open the navigation drawer from the left pane
Step 2: Choose the particular category (Singer/Composer/Director/Actor/Released Date) you want to search. You may select multiple categories.
Step 3: After choosing a category, press the "?" button to see a list of characters to choose from. Also, you may type a name directly and use the auto complete feature.
*For the singer category, you may use the exclusive mode on to search for songs sung alone by a particular singer.</string>

</resources>
