<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <!--  <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/lists"
        android:orderInCategory="100"
        android:title="@string/lists"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/developer"
        android:orderInCategory="100"
        android:title="@string/developer"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/developer2"
        android:orderInCategory="100"
        android:title="@string/developer2"
        app:showAsAction="never" />

   <!-- <item
        android:id="@+id/menu_item_share"
        app:showAsAction="never"

        android:orderInCategory="100"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="@string/share" />-->

  <item
      android:id="@+id/menu_item_share"
      app:showAsAction="never"
      android:orderInCategory="100"
      android:title="@string/share" />

</menu>