<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left"
        android:paddingTop="8dp"
        android:paddingLeft="10dp"
        android:paddingBottom="8dp">


        <CheckBox
            android:id="@+id/checkBox1"
            style="@style/check_style"
            android:text="@string/action"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/checkBox2"
            style="@style/check_style"
            android:text="Biopic"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/checkBox3"
            style="@style/check_style"
            android:checked="true"
            android:text="@string/comedy" />

        <CheckBox
            android:id="@+id/checkBox4"
            style="@style/check_style"
            android:checked="true"
            android:text="@string/drama" />

        <CheckBox
            android:id="@+id/checkBox5"
            style="@style/check_style"
            android:checked="true"
            android:text="@string/Fantasy" />


        <CheckBox
            android:id="@+id/checkBox6"
            style="@style/check_style"
            android:checked="true"
            android:text="@string/thriller" />

    </LinearLayout>

</LinearLayout>