<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2e2d2d"
    >


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:background="@drawable/a2"
                >



                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/sori"
                    android:padding="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    app:civ_border_width="2dp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="21sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#ffffff"
                    android:text="Mario" />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:animateLayoutChanges="true">
                <RelativeLayout
                    android:id="@+id/rl_cast"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="filterConditionClick"
                   >
                    <ImageView
                        style="@style/drawer_icon"
                        android:id="@+id/imageView2"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/singer" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/singer"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tv_starr"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageView2"
                        android:layout_toEndOf="@+id/imageView2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/rounded_red"
                        android:id="@+id/tv_actors_count"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:visibility="invisible"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Exclusive"
                        android:id="@+id/sw_singer"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:layout_toLeftOf="@+id/tv_actors_count" />
                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd"/>

                <LinearLayout
                    android:id="@+id/ll_castCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_cast_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ll_actor_parent_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                        </LinearLayout>
                        <include layout="@layout/layout_auto_complete_text" />
                    </LinearLayout>
                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/rl_director"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="filterConditionClick"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:id="@+id/imageView3"
                        style="@style/drawer_icon"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/composer" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/composer"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tv_director"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageView3"
                        android:layout_toEndOf="@+id/imageView3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/rounded_red"
                        android:id="@+id/tv_director_count"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:visibility="gone"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd"/>

                <LinearLayout
                    android:id="@+id/ll_directorCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_director_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/ll_director_parent_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                        </LinearLayout>
                        <AutoCompleteTextView
                            android:id="@+id/actv_director"
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:background="@color/b_whiteGreny" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="filterConditionClick"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:id="@+id/imageView4"
                        style="@style/drawer_icon"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/director" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tv_type"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageView4"
                        android:layout_toEndOf="@+id/imageView4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/rounded_red"
                        android:id="@+id/tv_director_counttt"
                        android:visibility="gone"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd"/>
                <LinearLayout
                    android:id="@+id/ll_typeCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_director_parent_layoutttt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                    <AutoCompleteTextView
                        android:id="@+id/actv_directorrrr"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:background="@color/b_whiteGreny" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_other"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="filterConditionClick"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:id="@+id/imageView6"
                        style="@style/drawer_icon"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/actotor2" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tv_other"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageView6"
                        android:layout_toEndOf="@+id/imageView6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/rounded_red"
                        android:id="@+id/tv_actor_counttt"
                        android:visibility="gone"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd"/>
                <LinearLayout
                    android:id="@+id/ll_typeCondition11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_actor_parent_layoutttt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                    <AutoCompleteTextView
                        android:id="@+id/actv_actorrr"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:background="@color/b_whiteGreny" />
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/rl_year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="filterConditionClick"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/drawer_icon"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/time" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tv_year"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imageView5"
                        android:layout_toEndOf="@+id/imageView5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:paddingBottom="1dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/rounded_red"
                        android:id="@+id/tv_year_count"
                        android:visibility="gone"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd"/>

                <LinearLayout
                    android:id="@+id/ll_timeCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <include layout="@layout/block_date_picker" />
                </LinearLayout>


                <Button
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:onClick="onSubmit"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/bt_submit" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>